@@ -702,7 +702,7 @@
 
     split: function(expression) {
       var expressions = [];
-      expression.scan(/(([\w#:.~>+()\s-]+|\*|\[.*?\])+)\s*(,|$)/, function(m) {
+      expression.scan(/(([\w#:.~>+()\s-]|\*|\[.*?\])+)\s*(,|$)/, function(m) {
         expressions.push(m[1].strip());
       });
       return expressions;
