@@ -1,3 +1,5 @@
+* Fix regexp in Selector.split() that caused Firefox 3 to freeze. [#408 state:resolved] [jddalton, kangax, Shawazi, William Warby]
+
 * Ensure Form.Element#(select|focus) return an element. [jddalton]
 
 * Optimize method execution speed by using the static Element methods instead of the DOM element methods. [jddalton]
